1. Fixed bug #91531 and #91532.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4872 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasServer/simias.in
+++ b/simias/src/SimiasServer/simias.in
@@ -9,11 +9,10 @@
 #
 #######################################################################
 
-export MONO_PATH=@_webbindir_@
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@_webbindir_@
-export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib
+export MONO_PATH=@_webbindir_@:$MONO_PATH
+export LD_LIBRARY_PATH=@_webbindir_@:$LD_LIBRARY_PATH
+export DYLD_LIBRARY_PATH=@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib:$DYLD_LIBRARY_PATH
 cd @_bindir_@
 
-ulimit -n 1024
 mono @_bindir_@/SimiasServer.exe $@
 
