--- a/ifolder/src/LinuxClient/application/ifolder.in
+++ b/ifolder/src/LinuxClient/application/ifolder.in
@@ -23,8 +23,8 @@
 #######################################################################
 
 # Startup iFolder
-export MONO_PATH=@_prefix_@/lib:@_webbindir_@
-export LD_LIBRARY_PATH=@_prefix_@/lib:@_webbindir_@
+export MONO_PATH=@_prefix_@/lib:@_webbindir_@:$MONO_PATH
+export LD_LIBRARY_PATH=@_prefix_@/lib:@_webbindir_@:$LD_LIBRARY_PATH
 cd @_prefix_@/bin
 mono iFolderClient.exe
 
