Bug 78572  Added more strings that are consistent
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4875 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/OSXClient/Makefile.am
+++ b/ifolder/src/OSXClient/Makefile.am
@@ -46,7 +46,7 @@ maintainer-clean-local:
 	rm -rf $(COMMON_MAINTAINER_CLEAN_FILES)
 
 generate-strings:
-	genstrings -o $(srcdir)/en.lproj `cat intlsrcfiles`
+	genstrings -q -o $(srcdir)/en.lproj `cat intlsrcfiles`
 	nibfiles=`cat intlnibfiles`; \
 	for nibfile in $$nibfiles; do \
 		nibtool -L $$nibfile > $$nibfile.strings; \
