--- a/Simias.csproj
+++ b/Simias.csproj
@@ -17,7 +17,7 @@
                 DelaySign = "false"
                 OutputType = "Library"
                 PreBuildEvent = ""
-                PostBuildEvent = "if not exist $(SolutionDir)stage mkdir $(SolutionDir)stage&#xd;&#xa;if not exist $(SolutionDir)stage\web mkdir $(SolutionDir)stage\web&#xd;&#xa;if not exist $(SolutionDir)stage\web\bin mkdir $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(TargetFileName) $(SolutionDir)stage\web\bin&#xd;&#xa;if exist $(TargetName).pdb copy $(TargetName).pdb $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\log4net\bin\net\1.1\release $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\mDnsResponder\net\bin\mDnsResponder.dll $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\mDnsResponder\net\bin\mDnsResponderApi.dll $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\mDnsResponder\net\bin\mDnsResponderCmd.exe $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\mDnsResponder\net\bin\mDnsResponderExe.exe $(SolutionDir)stage\web\bin&#xd;&#xa;"
+                PostBuildEvent = "if not exist $(SolutionDir)stage mkdir $(SolutionDir)stage&#xd;&#xa;if not exist $(SolutionDir)stage\web mkdir $(SolutionDir)stage\web&#xd;&#xa;if not exist $(SolutionDir)stage\web\bin mkdir $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(TargetFileName) $(SolutionDir)stage\web\bin&#xd;&#xa;if exist $(TargetName).pdb copy $(TargetName).pdb $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\log4net\bin\net\1.1\release $(SolutionDir)stage\web\bin&#xd;&#xa;"
                 RootNamespace = "Simias"
                 RunPostBuildEvent = "OnBuildSuccess"
                 StartupObject = ""
