1. Moved SimiasBrowser to be built as part of Simias.dll instead of Simias.Web.dll. 2. Removed SimiasBrowser.asmx from the distribution as this would be a security risk. 3. Cleaned up warnings in SharedCollections.cs and project files.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4931 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -548,6 +548,21 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Simias.Web\SimiasBrowser.asmx"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "src\Simias.Web\SimiasBrowser.asmx.cs"
+                    DependentUpon = "SimiasBrowser.asmx"
+                    SubType = "Component"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "src\Simias.Web\SimiasBrowser.asmx.resx"
+                    DependentUpon = "SimiasBrowser.asmx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "src\Smtp\Base64AttachmentEncoder.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
