--- a/src/SimiasServer/simias.in
+++ b/src/SimiasServer/simias.in
@@ -10,9 +10,16 @@
 #######################################################################
 
 export MONO_PATH=@_webbindir_@:$MONO_PATH
-export LD_LIBRARY_PATH=@_webbindir_@:$LD_LIBRARY_PATH
-export DYLD_LIBRARY_PATH=@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib:$DYLD_LIBRARY_PATH
-cd @_bindir_@
 
+if [ "${OSTYPE:0:6}" == "darwin" ]
+then
+	echo "Increasing ulimit -n to 2048"
+	export DYLD_LIBRARY_PATH=@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib:$DYLD_LIBRARY_PATH
+	ulimit -n 2048
+else
+	export LD_LIBRARY_PATH=@_webbindir_@:$LD_LIBRARY_PATH
+fi
+
+cd @_bindir_@
 mono @_bindir_@/SimiasServer.exe $@
 
