--- a/simias/package/linux/simias.spec.in
+++ b/simias/package/linux/simias.spec.in
@@ -36,7 +36,9 @@ Vendor       : Novell Inc.
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : mono-core >= 1.1.7
+Requires     : mono-core >= 1.1.7.7
+Requires     : mono-data >= 1.1.7.7
+Requires     : mono-web >= 1.1.7.7
 Requires     : xsp >= 1.0.9
 Obsoletes    : %{name} <= %{version}
 
