https://bugzilla.novell.com/show_bug.cgi?id=95652
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4984 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/simias.spec.in
+++ b/package/linux/simias.spec.in
@@ -36,7 +36,9 @@ Vendor       : Novell Inc.
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
-Requires     : mono-core >= 1.1.7
+Requires     : mono-core >= 1.1.7.7
+Requires     : mono-data >= 1.1.7.7
+Requires     : mono-web >= 1.1.7.7
 Requires     : xsp >= 1.0.9
 Obsoletes    : %{name} <= %{version}
 
