I don't have a bug number for this, I was just asked to fix it so I am...
updated the simias.spec.in to not overwrite web.config but to modify the existing web.config to have new and freshly updated settings


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5010 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/simias.spec.in
+++ b/package/linux/simias.spec.in
@@ -111,18 +111,28 @@ make DESTDIR=$RPM_BUILD_ROOT install
 
 #=============================================================================
 %Postun
-#INSTANCES_AFTER_UNINSTALL=$1
-#if [ "$INSTANCES_AFTER_UNINSTALL" = "0" ]; then
-    #
-    # Remove simias.sh from /etc/profile.d
-    #
-#    %{__rm} -f /etc/profile.d/simias.sh
-#fi
+INSTANCES_AFTER_UNINSTALL=$1
+if [ "$INSTANCES_AFTER_UNINSTALL" = "0" ]; then
+sed "s/.<add key.*=.*\"SimiasAuthNotRequired\".*\/>/        <add key=\"SimiasAuthNotRequired\" value=\"Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite\" \/>/" %{prefix}/web/web.config > %{prefix}/web/web.config.fixed
+mv %{prefix}/web/web.config.fixed %{prefix}/web/web.config
+fi
 
 #=============================================================================
 %Files
 %attr(755,root,root) %dir %{prefix}
 %defattr(755,root,root)
-%{prefix}/*
+%{prefix}/bin/*
+%{prefix}/etc/*
+%{prefix}/include/*
+%{prefix}/lib/*
+%{prefix}/share/*
+%{prefix}/web/bin/*
+%{prefix}/web/iFolder.asmx
+%{prefix}/web/Global.asax
+%{prefix}/web/Login.ashx
+%{prefix}/web/POService.asmx
+%{prefix}/web/Simias.asmx
+%{prefix}/web/SyncHandler.ashx
+%config(noreplace) %{prefix}/web/web.config
 
 
