--- a/nautilus-ifolder/configure.in
+++ b/nautilus-ifolder/configure.in
@@ -4,7 +4,8 @@ PACKAGE=nautilus-ifolder3
 AC_SUBST(PACKAGE)
 
 AM_INIT_AUTOMAKE($PACKAGE, 3.1)
-VERSION=$VERSION.`date +%Y%m%d`
+let "BUILDNUM=`date +%G%j`-2000000"
+VERSION=$VERSION.$BUILDNUM.1
 AC_SUBST(VERSION)
 AM_CONFIG_HEADER(config.h)
 
