--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,8 @@
 AC_INIT(src/Common/Configuration.cs)
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE(simias, 1.1)
-# VERSION=$VERSION.`date +%Y%m%d`
+let "BUILDNUM=`date +%G%j`-2000000"
+VERSION=$VERSION.$BUILDNUM.1
 AM_MAINTAINER_MODE
 AC_PROG_CC
 
@@ -14,14 +15,12 @@ case $host_os in
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
 	    PKG_CONFIG_DIR='lib'
-	    VERSION=$VERSION.`date +%Y%m%d`
     ;;
     darwin*)
         SIMIAS_OS='darwin'
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
 	    PKG_CONFIG_DIR='lib'
-	    VERSION=$VERSION.`date +%Y%m%d`
     ;;
     cygwin*)
         SIMIAS_OS='windows'
@@ -29,7 +28,6 @@ case $host_os in
         test -z "$CSC" && AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: neither csc nor mcs found in \$PATH])
     	PKG_CONFIG_DIR='.'
-    	VERSION=$VERSION.`date +%Y.%m%d`
     ;;
     *)
         AC_MSG_ERROR([Unknown host_os: $host_os])
