temporarily taking out all the languages because translation errors are causing the build errors
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5014 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/po/Makefile.am
+++ b/ifolder/src/LinuxClient/po/Makefile.am
@@ -17,13 +17,9 @@ SUFFIXES = .c .o .po .pox .gmo .mo
 	  && rm -f $$file && $(GMSGFMT) --statistics -o $$file $<
 
 POFILES = $(srcdir)/pt_BR.po \
-	 $(srcdir)/de.po \
 	 $(srcdir)/en.po \
 	 $(srcdir)/fi.po \
-	 $(srcdir)/ja.po \
-	 $(srcdir)/ma.po \
-	 $(srcdir)/sk.po \
-	 $(srcdir)/zh_CN.po
+	 $(srcdir)/ma.po
 
 CATALOGS := $(subst .po,.mo,$(POFILES))
 
