Added else to postun sed commands
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5017 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/simias.spec.in
+++ b/package/linux/simias.spec.in
@@ -113,6 +113,7 @@ make DESTDIR=$RPM_BUILD_ROOT install
 %Postun
 INSTANCES_AFTER_UNINSTALL=$1
 if [ "$INSTANCES_AFTER_UNINSTALL" = "0" ]; then
+else #upgrade case
 sed "s/.<add key.*=.*\"SimiasAuthNotRequired\".*\/>/        <add key=\"SimiasAuthNotRequired\" value=\"Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite\" \/>/" %{prefix}/web/web.config > %{prefix}/web/web.config.fixed
 mv %{prefix}/web/web.config.fixed %{prefix}/web/web.config
 fi
