added the max connections="10" to the simias.spec.in so the package will add it if not found and also updated the mono.web.config to it would be there on an initial install
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5020 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/WebService/mono.web.config
+++ b/simias/src/WebService/mono.web.config
@@ -32,6 +32,12 @@
 		</httpModules>
     </system.web>
 
+	<system.net>
+		<connectionManagement>
+			<add address="*" maxconnection="10" />
+		</connectionManagement>
+	</system.net>
+
 <!--
     <mono.aspnet>
         <acceptEncoding>
