added the max connections="10" to the simias.spec.in so the package will add it if not found and also updated the mono.web.config to it would be there on an initial install
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5020 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/simias.spec.in
+++ b/package/linux/simias.spec.in
@@ -78,7 +78,7 @@ if [ "$INSTANCES_AFTER_INSTALL" = "2" ]; then
 	# Upgrade
 	# update the Web.config from version 3.0 to 3.1
 	echo "Updating %{prefix}/web/web.config"
-	sed "s/.<add key.*=.*\"SimiasAuthNotRequired\".*\/>/        <add key=\"SimiasAuthNotRequired\" value=\"Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite\" \/>/" %{prefix}/web/web.config > %{prefix}/web/web.config.fixed
+	sed -e "s/.<add key.*=.*\"SimiasAuthNotRequired\".*\/>/        <add key=\"SimiasAuthNotRequired\" value=\"Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite\" \/>/" -e "/<system\.net/,/<\/system.net>/d" -e "s/<\/system.web>/<\/system.web>\n\n    <system.net>\n        <connectionManagement>\n            <add address=\"*\" maxconnection=\"10\" \/>\n        <\/connectionManagement>\n    <\/system.net>\n/" %{prefix}/web/web.config > %{prefix}/web/web.config.fixed
 	mv %{prefix}/web/web.config.fixed %{prefix}/web/web.config
 fi
 
