--- a/src/WebService/mono.web.config
+++ b/src/WebService/mono.web.config
@@ -32,6 +32,12 @@
 		</httpModules>
     </system.web>
 
+	<system.net>
+		<connectionManagement>
+			<add address="*" maxconnection="10" />
+		</connectionManagement>
+	</system.net>
+
 <!--
     <mono.aspnet>
         <acceptEncoding>
