--- a/src/POBoxWS/Makefile.am
+++ b/src/POBoxWS/Makefile.am
@@ -9,7 +9,11 @@ POBoxWS_FLAGS = $(CSC_LIBFLAG)
 POBoxWS_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll Simias.dll
 POBoxWS_LIBPATH = ../SimiasClient ../Simias.dll
 
-EXTRA_DIST = POService.asmx $(POBoxWS_CSFILES1)
+EXTRA_DIST = POService.asmx $(POBoxWS_CSFILES1) AssemblyInfo.cs.in
+
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
+	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
+	chmod +x $@
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -40,7 +44,7 @@ uninstall-local:
 
 installcheck-local: install
 	
-CLEAN_FILES = Simias.POBox.Web.dll $(DOC_FILE_CLEAN)
+CLEAN_FILES = Simias.POBox.Web.dll $(DOC_FILE_CLEAN) AssemblyInfo.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
