--- a/src/SimiasApp/AssemblyInfo.cs.in
+++ b/src/SimiasApp/AssemblyInfo.cs.in
@@ -1,7 +1,7 @@
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly: AssemblyVersion("1.0.4")]
+[assembly: AssemblyVersion("@_VERSION_@")]
 [assembly: AssemblyTitle ("Mono-XSP Server")]
 [assembly: AssemblyDescription ("Minimalistic web server for testing System.Web")]
 [assembly: AssemblyCopyright ("2002,2003 Ximian, Inc.\n(c) 2003,2004 Novell, Inc.")]
