1. Fixed bug #76115, 78631, 78712, 99600, 99601. The iFolder Windows Client install has been re-written and includes fixes for the previously listed bugs.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5029 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/windows/Makefile.am
+++ b/ifolder/package/windows/Makefile.am
@@ -69,7 +69,7 @@ SDK_MSM_DISK1 = $(SDK_MSM)/$(DISK1)/$(subst -,_,ifolder)_sdk.msm
 
 all: $(MSI_FILE)
 
-$(MSI_FILE): issabld $(MSM_FILE) $(SDK_MSM_FILE) $(MSI).ism
+$(MSI_FILE): issabld $(PACKAGE)-install $(MSI).ism
 	@rm -f $@ "$(MSI_DISK1)" "$(MSI_LOG_FILE)"
 	@CMD='"$(ISSABLD)" -t "$(REGASM_DIR)" -p "$(MSI).ism" -o "$(ISSABLD_DIR),$(MERGE_MODULES_WIN)"'; \
 		echo $$CMD; \
